--- a/.github/workflows/openaikeytest.yml
+++ b/.github/workflows/openaikeytest.yml
@@ -1,5 +1,4 @@
 name: Test OpenAI Key
-
 on:
   workflow_dispatch:
 
@@ -8,7 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Print OpenAI key length (not the key itself!)
+
+      - name: Show OpenAI key length (safe)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: echo "Key length: ${#OPENAI_API_KEY}"
+        run: |
+          python - <<'PY'
+          import os
+          key = os.environ.get("OPENAI_API_KEY","")
+          print(f"Key length: {len(key)}")
+          PY
