--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,7 +1,7 @@
 name: daily-episodes
 on:
   schedule:
-    - cron: "0 15 * * *"   # daily at 15:00 UTC (~10:00 AM CT during daylight savings)
+    - cron: "0 15 * * *"   # daily at 15:00 UTC (~10:00 AM CT during DST)
   workflow_dispatch:
 permissions:
   contents: write
@@ -35,16 +35,12 @@ jobs:
       - name: Install deps
         run: pip install -r infra/requirements.txt
 
-      - name: Install FFmpeg (ffmpeg + ffprobe)
+      - name: Install FFmpeg (ffmpeg + ffprobe) & fonts
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg fonts-dejavu-core
 
-      - name: (Optional) Install espeak-ng
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y espeak-ng
-
+      # ---------- PLAN & GENERATE ----------
       - name: Plan episode
         env:
           SERIES: ${{ matrix.series }}
@@ -57,15 +53,15 @@ jobs:
           OPENAI_MODEL: gpt-4o
         run: python planner/agent_director.py --series "$SERIES"
 
-      - name: Generate assets (with OpenAI TTS)
+      - name: Generate assets (OpenAI TTS)
         env:
           SERIES: ${{ matrix.series }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_TTS_MODEL: gpt-4o-mini-tts
-          OPENAI_TTS_VOICE: verse  # can be alloy, verse, sage
+          OPENAI_TTS_VOICE: verse   # change per account if you want
         run: python generator/gen_assets.py --series "$SERIES"
 
-      - name: Generate background
+      - name: Generate background (animated)
         env:
           SERIES: ${{ matrix.series }}
         run: python generator/gen_background.py --series "$SERIES"
@@ -85,14 +81,15 @@ jobs:
           SERIES: ${{ matrix.series }}
         run: python assembly/validate_video.py --series "$SERIES"
 
-      - name: Debug list out dir
+      - name: Debug: list out dir (always)
         if: always()
         run: |
-          echo "Tree for this series:"
+          echo "Tree for series=${{ matrix.series }}:"
           find out/${{ matrix.series }} -maxdepth 3 -type f -print || true
+      # ---------- /PLAN & GENERATE ----------
 
       # ---------- GUARDS ----------
-      - name: Guard — skip if repo is private
+      - name: Guard — repo visibility
         id: vis
         env:
           GH_TOKEN: ${{ github.token }}
@@ -106,7 +103,7 @@ jobs:
             echo "skip=false" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Guard — check IG publishing quota (24h)
+      - name: Guard — IG quota (24h)
         id: quota
         env:
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
@@ -114,30 +111,49 @@ jobs:
         run: |
           python - <<'PY'
           import os, requests, json
-          token = os.environ["IG_ACCESS_TOKEN"]
-          igid  = os.environ["IG_USER_ID"]
-          url = f"https://graph.facebook.com/v19.0/{igid}/content_publishing_limit"
-          r = requests.get(url, params={"fields": "quota_usage,config", "access_token": token}, timeout=30)
-          data = r.json()
-          quota_total = 100; quota_usage = 0
-          try:
-            row = (data.get("data") or [{}])[0]
-            quota_usage = int(row.get("quota_usage", 0))
-            cfg = (row.get("config") or [{}])[0]
-            quota_total = int(cfg.get("quota_total", quota_total))
-          except Exception:
-            print("[guard] unexpected response:", json.dumps(data))
-          remaining = max(quota_total - quota_usage, 0)
-          allow = remaining > 0
-          print(f"[guard] IG quota used={quota_usage}/{quota_total} remaining={remaining}")
+          token = os.environ.get("IG_ACCESS_TOKEN")
+          igid  = os.environ.get("IG_USER_ID")
+          allow = False
+          remaining = 0
+          if token and igid:
+            url = f"https://graph.facebook.com/v19.0/{igid}/content_publishing_limit"
+            r = requests.get(url, params={"fields": "quota_usage,config", "access_token": token}, timeout=30)
+            data = r.json()
+            try:
+              row = (data.get("data") or [{}])[0]
+              usage = int(row.get("quota_usage", 0))
+              cfg = (row.get("config") or [{}])[0]
+              total = int(cfg.get("quota_total", 100))
+              remaining = max(total - usage, 0)
+              allow = remaining > 0
+              print(f"[guard] IG quota used={usage}/{total} remaining={remaining}")
+            except Exception:
+              print("[guard] unexpected:", json.dumps(data))
           with open(os.environ["GITHUB_OUTPUT"], "a", encoding="utf-8") as f:
             f.write(f"allow={'true' if allow else 'false'}\n")
             f.write(f"remaining={remaining}\n")
           PY
       # ---------- /GUARDS ----------
 
-      - name: Checkout gh-pages branch (separate workdir)
-        if: ${{ steps.vis.outputs.skip != 'true' && !cancelled() }}
+      # ---------- PUBLISH (robust) ----------
+      - name: Find latest MP4
+        id: mp4
+        run: |
+          set -e
+          shopt -s nullglob
+          files=(out/${{ matrix.series }}/final/*.mp4)
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "No MP4 found for series ${{ matrix.series }}"
+            echo "found=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          latest=$(ls -t out/${{ matrix.series }}/final/*.mp4 | head -n 1)
+          echo "Using: $latest"
+          echo "found=true" >> "$GITHUB_OUTPUT"
+          echo "file=$latest" >> "$GITHUB_OUTPUT"
+
+      - name: Checkout gh-pages (separate workdir)
+        if: ${{ steps.mp4.outputs.found == 'true' && steps.vis.outputs.skip != 'true' && !cancelled() }}
         uses: actions/checkout@v4
         with:
           ref: gh-pages
@@ -145,10 +161,10 @@ jobs:
 
       - name: Publish MP4 to gh-pages
         id: publish_url
-        if: ${{ steps.vis.outputs.skip != 'true' && !cancelled() }}
+        if: ${{ steps.mp4.outputs.found == 'true' && steps.vis.outputs.skip != 'true' && !cancelled() }}
         run: |
           set -e
-          FILE=$(ls -t out/${{ matrix.series }}/final/*.mp4 | head -n 1)
+          FILE="${{ steps.mp4.outputs.file }}"
           NAME=$(basename "$FILE")
           mkdir -p site/reels/${{ matrix.series }}
           cp "$FILE" "site/reels/${{ matrix.series }}/$NAME"
@@ -163,15 +179,16 @@ jobs:
           echo "url=https://omeedilyas.github.io/ai-show-starter/reels/${{ matrix.series }}/$NAME" >> "$GITHUB_OUTPUT"
 
       - name: Post to Instagram (ai_teacher only) — REAL
-        if: ${{ matrix.series == 'ai_teacher' && steps.vis.outputs.skip != 'true' && steps.quota.outputs.allow == 'true' && !cancelled() }}
+        if: ${{ matrix.series == 'ai_teacher' && steps.mp4.outputs.found == 'true' && steps.vis.outputs.skip != 'true' && steps.quota.outputs.allow == 'true' && !cancelled() }}
         env:
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
         run: |
           echo "Posting URL: ${{ steps.publish_url.outputs.url }}"
           python publisher/post_instagram.py "${{ steps.publish_url.outputs.url }}" "Daily episode 🚀 #ai #reels #${{ matrix.series }}"
+      # ---------- /PUBLISH ----------
 
-      - name: Publish (DRY RUN)
+      - name: Publish (DRY RUN aggregate)
         if: ${{ !cancelled() }}
         env:
           SERIES: ${{ matrix.series }}
