--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,10 +1,8 @@
 name: daily-episodes
-
 on:
   schedule:
     - cron: "0 15 * * *"
   workflow_dispatch:
-
 permissions:
   contents: write
 
@@ -18,7 +16,7 @@ jobs:
     concurrency:
       group: daily-${{ matrix.series }}
       cancel-in-progress: false
-    timeout-minutes: 30
+    timeout-minutes: 40
 
     steps:
       - uses: actions/checkout@v4
@@ -42,17 +40,34 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg fonts-dejavu-core
 
-      # ---------- PLAN & GENERATE ----------
-      - name: Plan episode
-        env:
-          SERIES: ${{ matrix.series }}
-        run: python planner/plan_next.py --series "$SERIES"
-      
-      - name: Stage curriculum unit (placeholder-friendly)
+      # ----------------- PULL STOCK CACHE FROM gh-pages -----------------
+      - name: Checkout gh-pages into site/
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: site
+
+      - name: Seed local stock library from cache
+        run: |
+          mkdir -p assets/stock/${{ matrix.series }}
+          if [ -d "site/stock/${{ matrix.series }}" ]; then
+            rsync -a "site/stock/${{ matrix.series }}/" "assets/stock/${{ matrix.series }}/" || true
+          fi
+          if [ -d "site/stock/common" ]; then
+            mkdir -p assets/stock/common
+            rsync -a "site/stock/common/" "assets/stock/common/" || true
+          fi
+
+      # ----------------- CURRICULUM & PLANNING -----------------
+      - name: Stage curriculum (placeholder ok)
         env:
           SERIES: ${{ matrix.series }}
         run: python curriculum/extract_unit.py --series "$SERIES"
 
+      - name: Plan episode
+        env:
+          SERIES: ${{ matrix.series }}
+        run: python planner/plan_next.py --series "$SERIES"
 
       - name: Director Agent
         env:
@@ -61,6 +76,38 @@ jobs:
           OPENAI_MODEL: gpt-4o
         run: python planner/agent_director.py --series "$SERIES"
 
+      # ----------------- FETCH NEW STOCK VIA APIs -----------------
+      - name: Fetch stock clips (Pexels/Pixabay)
+        env:
+          SERIES: ${{ matrix.series }}
+          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+          PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
+        run: python generator/fetch_stock.py --series "$SERIES" --max_new 4 --per_query 8
+
+      # Push any newly fetched clips to gh-pages cache for future runs
+      - name: Push new stock to gh-pages cache
+        run: |
+          set -e
+          mkdir -p site/stock/${{ matrix.series }}
+          shopt -s nullglob
+          newfiles=(assets/stock/${{ matrix.series }}/*.mp4)
+          if [ ${#newfiles[@]} -gt 0 ]; then
+            cp -n assets/stock/${{ matrix.series }}/*.mp4 site/stock/${{ matrix.series }}/ || true
+          fi
+          # (optional common dir)
+          if [ -d assets/stock/common ]; then
+            mkdir -p site/stock/common
+            cp -n assets/stock/common/*.mp4 site/stock/common/ 2>/dev/null || true
+          fi
+
+          cd site
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add "stock/${{ matrix.series }}" "stock/common" || true
+          git commit -m "stock cache update (${{ matrix.series }}) from run ${{ github.run_id }}" || echo "nothing to commit"
+          git push origin HEAD:gh-pages
+
+      # ----------------- GENERATE CORE ASSETS -----------------
       - name: Generate assets (OpenAI TTS)
         env:
           SERIES: ${{ matrix.series }}
@@ -69,12 +116,12 @@ jobs:
           OPENAI_TTS_VOICE: verse
         run: python generator/gen_assets.py --series "$SERIES"
 
-      - name: Generate background (animated)
+      - name: Generate fallback background (animated color)
         env:
           SERIES: ${{ matrix.series }}
         run: python generator/gen_background.py --series "$SERIES"
 
-      - name: Select stock clips (local library)
+      - name: Select stock clips (from library)
         env:
           SERIES: ${{ matrix.series }}
         run: python generator/select_stock.py --series "$SERIES" --max_clips 6
@@ -84,7 +131,7 @@ jobs:
           SERIES: ${{ matrix.series }}
         run: python assembly/cut_visuals.py --series "$SERIES"
 
-      - name: Make captions (Whisper if available)
+      - name: Make captions (SRT)
         env:
           SERIES: ${{ matrix.series }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -100,33 +147,35 @@ jobs:
           SERIES: ${{ matrix.series }}
         run: python assembly/validate_video.py --series "$SERIES"
 
-      - name: Debug list out dir (always)
+      - name: Debug list outputs
         if: always()
         run: |
           echo "Tree for series=${{ matrix.series }}:"
           find out/${{ matrix.series }} -maxdepth 3 -type f -print || true
-      # ---------- /PLAN & GENERATE ----------
 
-      # ---------- PUBLISH (robust) ----------
-      - name: Find latest MP4
+      # ----------------- FIND & PUBLISH -----------------
+      - name: Resolve MP4 from plan.json
         id: mp4
         run: |
-          set -e
-          shopt -s nullglob
-          files=(out/${{ matrix.series }}/final/*.mp4)
-          if [ ${#files[@]} -eq 0 ]; then
-            echo "found=false" >> "$GITHUB_OUTPUT"; exit 0
-          fi
-          latest=$(ls -t out/${{ matrix.series }}/final/*.mp4 | head -n 1)
-          echo "found=true" >> "$GITHUB_OUTPUT"
-          echo "file=$latest" >> "$GITHUB_OUTPUT"
-
-      - name: Checkout gh-pages
-        if: ${{ steps.mp4.outputs.found == 'true' && steps.vis.outputs.skip != 'true' && !cancelled() }}
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: site
+          python - <<'PY'
+          import json, glob, sys
+          from pathlib import Path
+          series = "${{ matrix.series }}"
+          plans = sorted(Path("out", series).glob("ep_*/plan.json"))
+          if not plans:
+            print("found=false"); sys.exit(0)
+          p = plans[-1]
+          plan = json.loads(p.read_text(encoding="utf-8"))
+          vid = plan.get("video_path")
+          if vid and Path(vid).exists():
+            print("found=true"); print(f"file={vid}")
+          else:
+            files = sorted(Path("out", series, "final").glob("*.mp4"))
+            if files:
+              print("found=true"); print(f"file={files[-1]}")
+            else:
+              print("found=false")
+          PY >> "$GITHUB_OUTPUT"
 
       - name: Publish MP4 to gh-pages
         id: publish_url
@@ -137,10 +186,6 @@ jobs:
           NAME=$(basename "$FILE")
 
           cd site
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # make sure we're up to date BEFORE writing files
           git fetch origin gh-pages
           git checkout gh-pages
           git pull --rebase origin gh-pages
@@ -154,20 +199,7 @@ jobs:
 
           echo "url=https://omeedilyas.github.io/ai-show-starter/reels/${{ matrix.series }}/$NAME" >> "$GITHUB_OUTPUT"
 
-
-      - name: IG diag
-        if: ${{ matrix.series == 'ai_teacher' && steps.publish_url.outputs.url != '' }}
-        run: |
-          echo "IG_USER_ID len: ${#IG_USER_ID}"
-          echo "IG_ACCESS_TOKEN len: ${#IG_ACCESS_TOKEN}"
-          curl -I "${{ steps.publish_url.outputs.url }}"
-        env:
-          IG_USER_ID: ${{ secrets.IG_USER_ID }}
-          IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
-
-
-
-
+      # ---- Real Instagram only for ai_teacher (keep others dry) ----
       - name: Echo reel URL (ai_teacher)
         if: ${{ matrix.series == 'ai_teacher' && steps.mp4.outputs.found == 'true' && steps.publish_url.outputs.url != '' && !cancelled() }}
         run: |
@@ -180,20 +212,15 @@ jobs:
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
         run: |
           set -euo pipefail
-          python -u publisher/post_instagram.py "${{ steps.publish_url.outputs.url }}" "Daily episode 🚀 #ai #reels #${{ matrix.series }}" | tee ig_post.log
-          echo "[ok] post_instagram.py finished"
+          python -u publisher/post_instagram.py "${{ steps.publish_url.outputs.url }}" "Daily episode 🚀 #ai #reels #${{ matrix.series }}"
 
-
+      # ---- Keep aggregator as DRY marker ----
       - name: Publish (DRY RUN aggregate)
         if: ${{ !cancelled() }}
         env:
           SERIES: ${{ matrix.series }}
           DRY_RUN: "true"
-          IG_APP_ID: ${{ secrets.IG_APP_ID }}
-          IG_APP_SECRET: ${{ secrets.IG_APP_SECRET }}
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
-          IG_PAGE_ID: ${{ secrets.IG_PAGE_ID }}
-          TIKTOK_API_KEY: ${{ secrets.TIKTOK_API_KEY }}
         run: python publisher/post_all.py --series "$SERIES"
 
       - name: Upload artifact
